--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ html {
     --special-color: #906272;
     --background-color: #414141;
     --gray-text: #525252;
+    scroll-behavior: smooth;
 }
 
 h1 {
@@ -371,6 +372,7 @@ footer h4 {
     .burger {
         position: relative;
         display: block;
+        cursor: pointer;
     }
     .burger span {
         padding: 0.2rem 2rem;
@@ -395,32 +397,19 @@ footer h4 {
         font-size: var(--header3);
         text-decoration: underline;
     }
-    .menu-check {
-        position: absolute;
-        display: block;
-        top: 50%;
-        right: 5%;
-        transform: translate(5%, -50%);
-        width: 5rem;
-        height: 5rem;
-        cursor: pointer;
-        opacity: 0;
-        z-index: 100;
-    }
-    .menu-check:checked+.nav-links {
+    .nav-open {
         transform: translate(-100%);
     }
-    .menu-check:checked~.burger span {
+    .toggle .line1 {
+        transform: rotateZ(45deg) translateY(300%);
         background: white;
     }
-    .menu-check:checked~.burger span:nth-child(1) {
-        transform: rotateZ(45deg) translateY(300%);
-    }
-    .menu-check:checked~.burger span:nth-child(3) {
-        transform: rotateZ(-45deg) translateY(-300%);
-    }
-    .menu-check:checked~.burger span:nth-child(2) {
+    .toggle .line2 {
         opacity: 0;
+    }
+    .toggle .line3 {
+        background: white;
+        transform: rotateZ(-45deg) translateY(-300%);
     }
     /* ABOUT SECTION */
     .about-text div {
